--- a/dl.ipynb
+++ b/dl.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -79,7 +79,7 @@
         "id": "xkKirMYfzA44",
         "outputId": "1e2b1403-edd7-463d-95ef-692e76a0ad10"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,7 @@
         "id": "BR3H3HZz2c9d",
         "outputId": "59031f06-3305-4371-811b-c10586ab59b5"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +158,7 @@
         "id": "RAqWIYeb4HTS",
         "outputId": "8cc98453-3ca5-429b-e0f0-bc239fde8525"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,88 +179,91 @@
       "source": [
         "import numpy as np\n",
         "\n",
+        "# XOR input and target\n",
+        "inputs = np.array([[0, 0], [0, 1], [1, 0], [1, 1]])\n",
+        "target = np.array([[0], [1], [1], [0]])\n",
+        "\n",
+        "# Define the network architecture\n",
+        "input_neurons = 2\n",
+        "hidden_neurons = 2  # A small hidden layer is sufficient for XOR\n",
+        "output_neurons = 1\n",
+        "learning_rate = 0.1\n",
+        "epochs = 5000\n",
+        "\n",
+        "# Initialize weights and biases randomly\n",
+        "hidden_weights = np.random.rand(input_neurons, hidden_neurons) - 0.5\n",
+        "hidden_bias = np.random.rand(1, hidden_neurons) - 0.5\n",
+        "output_weights = np.random.rand(hidden_neurons, output_neurons) - 0.5\n",
+        "output_bias = np.random.rand(1, output_neurons) - 0.5\n",
+        "\n",
         "# Sigmoid activation function\n",
         "def sigmoid(x):\n",
         "    return 1 / (1 + np.exp(-x))\n",
         "\n",
-        "# Derivative of sigmoid (for weight updates)\n",
         "def sigmoid_derivative(x):\n",
         "    return x * (1 - x)\n",
         "\n",
-        "# XOR input and output pairs\n",
-        "inputs = np.array([[0, 0], [0, 1], [1, 0], [1, 1]])\n",
-        "target = np.array([[0], [1], [1], [0]])  # XOR truth table\n",
-        "\n",
-        "# Initialize weights randomly\n",
-        "np.random.seed(42)  # For reproducibility\n",
-        "w_hidden = np.random.uniform(-1, 1, (2, 2))  # 2 hidden neurons, 2 input features\n",
-        "b_hidden = np.random.uniform(-1, 1, (1, 2))  # Bias for hidden neurons\n",
-        "w_output = np.random.uniform(-1, 1, (2, 1))  # 2 hidden neurons → 1 output neuron\n",
-        "b_output = np.random.uniform(-1, 1, (1, 1))  # Bias for output neuron\n",
-        "\n",
-        "learning_rate = 0.5\n",
-        "epochs = 10000\n",
+        "# Training the neural network\n",
         "for epoch in range(epochs):\n",
-        "    hidden_input = np.dot(inputs, w_hidden) + b_hidden\n",
-        "    hidden_output = sigmoid(hidden_input)\n",
-        "    final_input = np.dot(hidden_output, w_output) + b_output\n",
-        "    final_output = sigmoid(final_input)\n",
-        "    error = target - final_output\n",
-        "    d_output = error * sigmoid_derivative(final_output)\n",
-        "    d_hidden = np.dot(d_output, w_output.T) * sigmoid_derivative(hidden_output)\n",
-        "    w_output += np.dot(hidden_output.T, d_output) * learning_rate\n",
-        "    b_output += np.sum(d_output, axis=0, keepdims=True) * learning_rate\n",
-        "    w_hidden += np.dot(inputs.T, d_hidden) * learning_rate\n",
-        "    b_hidden += np.sum(d_hidden, axis=0, keepdims=True) * learning_rate\n",
-        "print(\"Final Weights:\")\n",
-        "print(f\"w_hidden:\\n{w_hidden}\\n\")\n",
-        "print(f\"b_hidden:\\n{b_hidden}\\n\")\n",
-        "print(f\"w_output:\\n{w_output}\\n\")\n",
-        "print(f\"b_output:\\n{b_output}\\n\")\n",
-        "print(\"XOR Predictions:\")\n",
+        "    # Forward propagation\n",
+        "    hidden_layer_input = np.dot(inputs, hidden_weights) + hidden_bias\n",
+        "    hidden_layer_output = sigmoid(hidden_layer_input)\n",
+        "\n",
+        "    output_layer_input = np.dot(hidden_layer_output, output_weights) + output_bias\n",
+        "    predicted_output = sigmoid(output_layer_input)\n",
+        "\n",
+        "    # Backpropagation\n",
+        "    output_error = target - predicted_output\n",
+        "    output_delta = output_error * sigmoid_derivative(predicted_output)\n",
+        "\n",
+        "    hidden_layer_error = output_delta.dot(output_weights.T)\n",
+        "    hidden_delta = hidden_layer_error * sigmoid_derivative(hidden_layer_output)\n",
+        "\n",
+        "    # Update weights and biases\n",
+        "    output_weights += hidden_layer_output.T.dot(output_delta) * learning_rate\n",
+        "    output_bias += np.sum(output_delta, axis=0, keepdims=True) * learning_rate\n",
+        "    hidden_weights += inputs.T.dot(hidden_delta) * learning_rate\n",
+        "    hidden_bias += np.sum(hidden_delta, axis=0, keepdims=True) * learning_rate\n",
+        "\n",
+        "    # Print error every 1000 epochs\n",
+        "    if (epoch + 1) % 1000 == 0:\n",
+        "        loss = np.mean(np.abs(output_error))\n",
+        "        print(f\"Epoch {epoch+1}, Loss: {loss:.4f}\")\n",
+        "\n",
+        "# Testing the network\n",
+        "print(\"\\nPredictions after training:\")\n",
+        "hidden_layer_input = np.dot(inputs, hidden_weights) + hidden_bias\n",
+        "hidden_layer_output = sigmoid(hidden_layer_input)\n",
+        "output_layer_input = np.dot(hidden_layer_output, output_weights) + output_bias\n",
+        "predicted_output = sigmoid(output_layer_input)\n",
+        "\n",
         "for i in range(len(inputs)):\n",
-        "    hidden_input = np.dot(inputs[i], w_hidden) + b_hidden\n",
-        "    hidden_output = sigmoid(hidden_input)\n",
-        "\n",
-        "    final_input = np.dot(hidden_output, w_output) + b_output\n",
-        "    final_output = sigmoid(final_input)\n",
-        "\n",
-        "    predicted_output = 1 if final_output > 0.5 else 0\n",
-        "    print(f\"{inputs[i][0]} XOR {inputs[i][1]} = {predicted_output}\")\n"
+        "    print(f\"{inputs[i]} XOR = {int(np.round(predicted_output[i][0]))}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "WizsK0hoEKXG",
-        "outputId": "072ce665-1a97-45b5-8ac5-b9339c78f5c5"
+        "outputId": "e2552e23-222b-4205-b63d-b73729fccb7f"
       },
-      "execution_count": 11,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Final Weights:\n",
-            "w_hidden:\n",
-            "[[4.70178466 6.32396024]\n",
-            " [4.70124355 6.32206278]]\n",
+            "Epoch 1000, Loss: 0.4988\n",
+            "Epoch 2000, Loss: 0.4883\n",
+            "Epoch 3000, Loss: 0.4202\n",
+            "Epoch 4000, Loss: 0.3021\n",
+            "Epoch 5000, Loss: 0.1625\n",
             "\n",
-            "b_hidden:\n",
-            "[[-7.21504084 -2.80630971]]\n",
-            "\n",
-            "w_output:\n",
-            "[[-10.19219823]\n",
-            " [  9.58479322]]\n",
-            "\n",
-            "b_output:\n",
-            "[[-4.46643253]]\n",
-            "\n",
-            "XOR Predictions:\n",
-            "0 XOR 0 = 0\n",
-            "0 XOR 1 = 1\n",
-            "1 XOR 0 = 1\n",
-            "1 XOR 1 = 0\n"
+            "Predictions after training:\n",
+            "[0 0] XOR = 0\n",
+            "[0 1] XOR = 1\n",
+            "[1 0] XOR = 1\n",
+            "[1 1] XOR = 0\n"
           ]
         }
       ]
@@ -304,7 +307,7 @@
         "id": "8hW5H8HZGKED",
         "outputId": "91b4eb82-12aa-440e-c57e-bfc1b8128b64"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,7 +406,7 @@
         "id": "YPEopRrjHiwi",
         "outputId": "a2c6bf64-9316-43c7-9be1-0b176edfb47d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -482,7 +485,7 @@
         "id": "1QJOvKlpH5zs",
         "outputId": "278f123a-5d4f-4088-eed0-c8fcb52e5857"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -607,7 +610,7 @@
         "id": "awj3UqfwIVEQ",
         "outputId": "61e74950-4d96-4a26-c499-d4283b2fba5d"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -694,7 +697,7 @@
         "id": "B48DunkdI02i",
         "outputId": "de792bb0-92bc-4d03-afe9-b5aca833ba88"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
